Bug#43207 wrong LC_TIME names for romanian locale A contributed patch by Andrei Boros (SCA signed). - Fixing locale definition file - Adding tests